log/build_2025-11-11_16-23-51/command_nodes/stderr.log
  File "/root/Autonomous-Delivery-Robot-ROS2/install/command_nodes/lib/python3.10/site-packages/command_nodes/command_handler.py", line 68
    !/usr/bin/env python4
    ^
SyntaxError: invalid syntax

